--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact | Rehoboth Allied Ventures</title>
-    
-    <meta name="description" content="Rehoboth Allied Ventures">
-    <meta name="keywords" content="Rehoboth Allied Ventures">
+
+    <!-- Favicon for most browsers -->
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+
+    <!-- Manifest for PWA / Android -->
+    <link rel="manifest" href="site.webmanifest">
+    <!-- Meta description -->
+    <meta name="description" content="Rehoboth Allied Ventures markets, sells & distributes products across North America, the Middle East & Africa. Expand your reach with trusted global logistics.
+">
+    <!-- Meta Keywords -->
+    <meta name="keywords" content="product distribution, global logistics, sales representation, product marketing, supply chain management, retail partnerships, international trade, North America distributor, Middle East logistics, Africa product distribution, brand representation, ecommerce distribution
+">
+
+    <meta property="og:title" content="Contact | Rehoboth Allied Ventures | Your Gateway to the World">
+    <meta property="og:description"
+        content="We market, sell, and distribute products across North America, the Middle East & Africa. Let Rehoboth power your brand’s global reach.">
+    <meta property="og:image" content="https://rehoboth-allied.vercel.app/preview-image.png">
+
+    <meta property="og:url" content="https://rehoboth-allied.vercel.app/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Rehoboth Allied Ventures">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Contact | Rehoboth Allied Ventures | Your Gateway to the World">
+    <meta name="twitter:description"
+        content="We help your brand scale through smart marketing, logistics & global distribution across North America, MENA & Africa.">
+    <meta name="twitter:image" content="https://rehoboth-allied.vercel.app/preview-image.png">
+
     <!-- Preload Fonts -->
     <link rel="preload" href="assets/fonts/Nexa-Bold.otf" as="font" type="font/otf" crossorigin>
     <link rel="preload" href="assets/fonts/NexaBold.otf" as="font" type="font/otf" crossorigin>
@@ -21,51 +53,57 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="nav-container">
-            <a href="index.html" class="logo" aria-label="logo">
-                <img src="assets/images/Rehoboth-Allied Ventures-Crop.png" alt="">
-            </a>
-            <ul class="nav-menu" id="navMenu">
-                <li><a href="index.html" class="btn" aria-label="Home">Home</a></li>
-                <li><a href="index.html#services" class="btn" aria-label="Services">Services</a></li>
-                <li><a href="index.html#faq" class="btn" aria-label="FAQ">FAQ</a></li>
-                <li><a href="contact.html" class="btn active" aria-label="Cantact">Cantact</a></li>
-            </ul>
+    <!-- Header start -->
+    <header>
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="index.html" class="logo" aria-label="logo">
+                    <img src="assets/images/Rehoboth-Allied Ventures-Crop.png" alt="">
+                </a>
+                <ul class="nav-menu" id="navMenu">
+                    <li><a href="index.html" class="btn" aria-label="Home">Home</a></li>
+                    <li><a href="index.html#services" class="btn" aria-label="Services">Services</a></li>
+                    <li><a href="index.html#faq" class="btn" aria-label="FAQ">FAQ</a></li>
+                    <li><a href="contact.html" class="btn active" aria-label="Cantact">Cantact</a></li>
+                </ul>
 
-            <a href="#" class="phone desktop-phone" aria-label="phone">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path
-                        d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72 12.84 12.84 0 00.7 2.81 2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45 12.84 12.84 0 002.81.7A2 2 0 0122 16.92z" />
-                </svg>
-                <span>(123) 456 789</span>
-            </a>
+                <a href="#" class="phone desktop-phone" aria-label="phone">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path
+                            d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72 12.84 12.84 0 00.7 2.81 2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45 12.84 12.84 0 002.81.7A2 2 0 0122 16.92z" />
+                    </svg>
+                    <span>(123) 456 789</span>
+                </a>
 
-            <button class="mobile-menu-btn" id="mobileMenuBtn">
-                <svg id="menuIcon" viewBox="0 0 24 24" fill="#fff" stroke="#fff" stroke-width="2">
-                    <line x1="3" y1="12" x2="21" y2="12"></line>
-                    <line x1="3" y1="6" x2="21" y2="6"></line>
-                    <line x1="3" y1="18" x2="21" y2="18"></line>
-                </svg>
-                <svg id="closeIcon" style="display: none;" viewBox="0 0 24 24" fill="#fff" stroke="#fff"
-                    stroke-width="2">
-                    <line x1="18" y1="6" x2="6" y2="18"></line>
-                    <line x1="6" y1="6" x2="18" y2="18"></line>
-                </svg>
-            </button>
-        </div>
-    </nav>
+                <button class="mobile-menu-btn" id="mobileMenuBtn">
+                    <svg id="menuIcon" viewBox="0 0 24 24" fill="#fff" stroke="#fff" stroke-width="2">
+                        <line x1="3" y1="12" x2="21" y2="12"></line>
+                        <line x1="3" y1="6" x2="21" y2="6"></line>
+                        <line x1="3" y1="18" x2="21" y2="18"></line>
+                    </svg>
+                    <svg id="closeIcon" style="display: none;" viewBox="0 0 24 24" fill="#fff" stroke="#fff"
+                        stroke-width="2">
+                        <line x1="18" y1="6" x2="6" y2="18"></line>
+                        <line x1="6" y1="6" x2="18" y2="18"></line>
+                    </svg>
+                </button>
+            </div>
+        </nav>
+    </header>
+    <!-- Header end -->
 
     <main>
+        <!-- Contact form -->
         <section class="contact-form">
             <div class="container">
                 <iframe
                     src="https://docs.google.com/forms/d/e/1FAIpQLScnu1ZaIlOe0rpHqXmxIeIo5A1Bg_9OFAgUpn8RAbSDjfSNzg/viewform?embedded=true"
-                    width="640" height="2750" frameborder="0" marginheight="0" marginwidth="0" class="contact-iframe">Loading…</iframe>
+                    width="640" height="2750" frameborder="0" marginheight="0" marginwidth="0"
+                    class="contact-iframe">Loading…</iframe>
             </div>
         </section>
+        <!-- Contact form -->
     </main>
-
 
     <!-- Footer Start -->
     <footer>
@@ -78,8 +116,9 @@
                     <div class="social-icons">
                         <a href="http://www.linkedin.com/in/peyton-hoang" aria-label="Rehoboth Allied Ventures linkedin"
                             target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a href="https://www.upwork.com/freelancers/~01b70563a5315ceddd" aria-label="Rehoboth Allied Ventures instagram"
-                            target="_blank"><i class="fab fa-instagram" style="font-size: 20px;"></i></a>
+                        <a href="https://www.upwork.com/freelancers/~01b70563a5315ceddd"
+                            aria-label="Rehoboth Allied Ventures instagram" target="_blank"><i class="fab fa-instagram"
+                                style="font-size: 20px;"></i></a>
                     </div>
                 </div>
 
@@ -99,8 +138,8 @@
                     <div class="contact-info">
                         <div><i class="fa-regular fa-envelope"></i> <a href="mailto:info@gmail.com"
                                 aria-label="gmail">info@gmail.com</a></div>
-                        <div><i class="fa-solid fa-location-dot"></i> <a href="#"
-                                aria-label="location">Location</a></div>
+                        <div><i class="fa-solid fa-location-dot"></i> <a href="#" aria-label="location">Location</a>
+                        </div>
                         <div><i class="fa-solid fa-phone"></i> <a href="tel:+123456789" aria-label="phone">(123)
                                 456 789</a>
                         </div>
