--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- Preload hero image (critical for performance) -->
+    <link rel="preload" as="image" href="assets/images/hero.avif" type="image/avif">
 </head>
 
 <body>
