--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <section id="hero" style="background-image: url('assets/images/hero.avif');">
             <div class="container">
                 <div class="hero_content">
-                    <h1 class="hero-title">Rehoboth Allied Ventures</h1>
+                    <h1>Rehoboth Allied Ventures</h1>
                     <h2>YOUR GATEWAY TO THE WORLD</h2>
                     <p>We market, sell, and distribute products <br>across North America, the Middle East, and Africa.
                     </p>
