--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <a href="index.html" class="logo" aria-label="logo">
-                    <img src="assets/images/Rehoboth-Allied Ventures-Crop.png" alt="">
+                    <img src="assets/images/logo.png" alt="Rehoboth Allied Ventures logo">
                 </a>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html" class="btn" aria-label="Home">Home</a></li>
