--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <a href="#" class="logo">
-                    <img src="assets/images/Rehoboth-Allied Ventures-Crop.png" alt="">
+                    <img src="assets/images/logo.png" alt="Rehoboth Allied Ventures logo">
                 </a>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html" class="btn active" aria-label="Home">Home</a></li>
@@ -227,7 +227,7 @@
             <div class="container">
                 <div class="two-col">
                     <div class="column left text-center">
-                        <img class="img-fluid d-none d-md-block" src="assets/images/03.webp" alt="">
+                        <img class="img-fluid d-none d-md-block" src="assets/images/03.webp" alt="Rehoboth Allied Ventures">
                     </div>
                     <div class="column right">
                         <h3>We Don’t Just List Products — We Move Them</h3>
@@ -256,7 +256,7 @@
                     <div class="column left">
                         <div class="column-sticky">
                             <h3>Tailored solutions for your needs</h3>
-                            <img class="img-fluid" src="assets/images/02.webp" alt="">
+                            <img class="img-fluid" src="assets/images/02.webp" alt="Tailored solutions for your needs">
                         </div>
                     </div>
                     <div class="column right">
