--- a/contact.html
+++ b/contact.html
@@ -111,8 +111,8 @@
             <div class="footer-container">
                 <!-- Left -->
                 <div class="footer-left">
-                    <h4>Rehoboth Allied Ventures</h4>
-                    <p>Your Gateway to the world</p>
+                    <a href="index.html" aria-label="logo"><img class="img-fluid" width="170" height="58"
+                            src="assets/images/logo.png" alt="Rehoboth Allied Ventures logo"></a>
                     <div class="social-icons">
                         <a href="http://www.linkedin.com/in/peyton-hoang" aria-label="Rehoboth Allied Ventures linkedin"
                             target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
