--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <a href="#" class="logo">
-                    <img src="assets/images/logo.png" alt="Rehoboth Allied Ventures logo">
+                    <img width="170" height="58" src="assets/images/logo.png" alt="Rehoboth Allied Ventures logo">
                 </a>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html" class="btn active" aria-label="Home">Home</a></li>
@@ -127,7 +127,8 @@
                         </a>
                     </div>
                     <div class="column right text-center">
-                        <img class="img-fluid mb-34" src="assets/images/01.webp" alt="About Rehoboth Allied Ventures">
+                        <img class="img-fluid mb-34" width="560" height="672" src="assets/images/01.webp"
+                            alt="About Rehoboth Allied Ventures">
                         <!-- Mobile version -->
                         <p class="mb-34 d-block d-md-none">Whether you're launching a new product or scaling into new
                             markets, Rehoboth provides the expertise, reach, and support to help you succeed.</p>
@@ -215,7 +216,8 @@
                         <p>Monitor your shipments at every stage with our advanced tracking system</p>
                     </div>
                     <div class="global-reach__map">
-                        <img src="assets/images/global-2.jpg" alt="Global Reach">
+                        <img class="img-fluid" width="1525" height="620" src="assets/images/global-2.jpg"
+                            alt="Global Reach">
                     </div>
                 </div>
             </div>
@@ -227,11 +229,13 @@
             <div class="container">
                 <div class="two-col">
                     <div class="column left text-center">
-                        <img class="img-fluid d-none d-md-block" src="assets/images/03.webp" alt="Rehoboth Allied Ventures">
+                        <img class="img-fluid d-none d-md-block" width="750" height="900" src="assets/images/03.webp"
+                            alt="Rehoboth Allied Ventures">
                     </div>
                     <div class="column right">
                         <h3>We Don’t Just List Products — We Move Them</h3>
-                        <img class="img-fluid d-block d-md-none mb-34" src="assets/images/03.webp" alt="">
+                        <img class="img-fluid d-block d-md-none mb-34" width="750" height="900"
+                            src="assets/images/03.webp" alt="">
                         <p>By combining retail expertise, data-driven marketing, and efficient global distribution, we
                             drive consistent, profitable sell-through across major retail channels worldwide. Our
                             mission is simple: to turn visibility into sales velocity and shelf presence into real
@@ -256,7 +260,8 @@
                     <div class="column left">
                         <div class="column-sticky">
                             <h3>Tailored solutions for your needs</h3>
-                            <img class="img-fluid" src="assets/images/02.webp" alt="Tailored solutions for your needs">
+                            <img class="img-fluid" width="300" height="360" src="assets/images/02.webp"
+                                alt="Tailored solutions for your needs">
                         </div>
                     </div>
                     <div class="column right">
@@ -419,8 +424,8 @@
             <div class="footer-container">
                 <!-- Left -->
                 <div class="footer-left">
-                    <h4>Rehoboth Allied Ventures</h4>
-                    <p>Your Gateway to the world</p>
+                    <a href="index.html" aria-label="logo"><img class="img-fluid" width="170" height="58"
+                            src="assets/images/logo.png" alt="Rehoboth Allied Ventures logo"></a>
                     <div class="social-icons">
                         <a href="" aria-label="Rehoboth Allied Ventures linkedin" target="_blank"><i
                                 class="fa-brands fa-linkedin-in"></i></a>
