--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <main>
         <!-- hero start -->
-        <section id="hero" style="background-image: url('assets/images/hero.avif');">
+        <div id="hero" style="background-image: url('assets/images/hero.avif');">
             <div class="container">
                 <div class="hero_content">
                     <h1 class="hero-title">Rehoboth Allied Ventures</h1>
@@ -106,7 +106,7 @@
                     </a>
                 </div>
             </div>
-        </section>
+        </div>
         <!-- hero end -->
 
         <!-- about start -->
