--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
                 <iframe
                     src="https://docs.google.com/forms/d/e/1FAIpQLScnu1ZaIlOe0rpHqXmxIeIo5A1Bg_9OFAgUpn8RAbSDjfSNzg/viewform?embedded=true"
                     width="640" height="2750" frameborder="0" marginheight="0" marginwidth="0"
-                    class="contact-iframe">Loading…</iframe>
+                    class="contact-iframe" aria-label="Contact Form">Loading…</iframe>
             </div>
         </section>
         <!-- Contact form -->
