--- a/contact.html
+++ b/contact.html
@@ -20,15 +20,15 @@
     <!-- Manifest for PWA / Android -->
     <link rel="manifest" href="site.webmanifest">
     <!-- Meta description -->
-    <meta name="description" content="Rehoboth Allied Ventures markets, sells & distributes products across North America, the Middle East & Africa. Expand your reach with trusted global logistics.
+    <meta name="description" content="Rehoboth Allied Ventures markets, sells & distributes products across North America, the Middle East, Africa & Europe. Expand your reach with trusted global logistics.
 ">
     <!-- Meta Keywords -->
-    <meta name="keywords" content="product distribution, global logistics, sales representation, product marketing, supply chain management, retail partnerships, international trade, North America distributor, Middle East logistics, Africa product distribution, brand representation, ecommerce distribution
+    <meta name="keywords" content="product distribution, global logistics, sales representation, product marketing, supply chain management, retail partnerships, international trade, North America distributor, Middle East logistics, Africa & Europe product distribution, brand representation, ecommerce distribution
 ">
 
     <meta property="og:title" content="Contact | Rehoboth Allied Ventures | Your Gateway to the World">
     <meta property="og:description"
-        content="We market, sell, and distribute products across North America, the Middle East & Africa. Let Rehoboth power your brand’s global reach.">
+        content="We market, sell, and distribute products across North America, the Middle East, Africa & Europe. Let Rehoboth power your brand’s global reach.">
     <meta property="og:image" content="https://rehoboth-allied.vercel.app/preview-image.png">
 
     <meta property="og:url" content="https://rehoboth-allied.vercel.app/">
@@ -38,7 +38,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Contact | Rehoboth Allied Ventures | Your Gateway to the World">
     <meta name="twitter:description"
-        content="We help your brand scale through smart marketing, logistics & global distribution across North America, MENA & Africa.">
+        content="We help your brand scale through smart marketing, logistics & global distribution across North America, MENA, Africa & Europe.">
     <meta name="twitter:image" content="https://rehoboth-allied.vercel.app/preview-image.png">
 
     <!-- Preload Fonts -->
