--- a/index.html
+++ b/index.html
@@ -269,8 +269,7 @@
                             <span>01</span>
                             <div class="solutions-info-list__details">
                                 <p>Expanded Market Reach</p>
-                                <span>Access top-tier retail channels across North America, Europe, the Middle East, and
-                                    Africa</span>
+                                <span>Access top-tier retail channels across North America, Europe, the Middle East, Africa & Europe</span>
                             </div>
                         </div>
                         <div class="solutions-info__list">
@@ -338,7 +337,7 @@
                         <div class="faq-answer">
                             <p>Rehoboth Allied Ventures is a global marketing, sales, and distribution company that
                                 helps brands expand into major retail channels as well as regional stores across North
-                                America, Europe, the Middle East, and Africa. We focus on driving consistent, profitable
+                                America, Europe, the Middle East, Africa & Europe. We focus on driving consistent, profitable
                                 sell-through, not just getting products listed.</p>
                         </div>
                     </div>
@@ -378,7 +377,7 @@
                         <button class="faq-question">In which regions or markets can you help sell our
                             products?</button>
                         <div class="faq-answer">
-                            <p>We actively operate in North America, Europe, the Middle East, and Africa, offering
+                            <p>We actively operate in North America, Europe, the Middle East, Africa & Europe, offering
                                 regional market intelligence and logistics support for brands seeking both online and
                                 brick-and-mortar retail expansion in these territories.</p>
                         </div>
