--- a/index.html
+++ b/index.html
@@ -65,17 +65,8 @@
                     <li><a href="index.html" class="btn active" aria-label="Home">Home</a></li>
                     <li><a href="#services" class="btn" aria-label="Services">Services</a></li>
                     <li><a href="#faq" class="btn" aria-label="FAQ">FAQ</a></li>
-                    <li><a href="contact.html" class="btn" aria-label="Cantact">Cantact</a></li>
+                    <li><a href="contact.html" class="btn" aria-label="Cantact">Contact</a></li>
                 </ul>
-
-                <a href="#" class="phone desktop-phone" aria-label="Phone">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path
-                            d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72 12.84 12.84 0 00.7 2.81 2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45 12.84 12.84 0 002.81.7A2 2 0 0122 16.92z" />
-                    </svg>
-                    <span>(123) 456 789</span>
-                </a>
-
                 <button class="mobile-menu-btn" id="mobileMenuBtn">
                     <svg id="menuIcon" viewBox="0 0 24 24" fill="#fff" stroke="#fff" stroke-width="2">
                         <line x1="3" y1="12" x2="21" y2="12"></line>
@@ -115,7 +106,7 @@
                 <div class="two-col">
                     <div class="column left">
                         <h3>About</h3>
-                        <p class="mb-34 mb-14">Rehoboth Allied Ventures is a leading distributer with a trusted network
+                        <p class="mb-34 mb-14">Rehoboth Allied Ventures is a leading distributor with a trusted network
                             and
                             logistics partners across three continents. We connect products with markets, ensuring
                             efficient and reliable delivery solutions.</p>
@@ -216,7 +207,7 @@
                         <p>Monitor your shipments at every stage with our advanced tracking system</p>
                     </div>
                     <div class="global-reach__map">
-                        <img class="img-fluid" width="1525" height="620" src="assets/images/global-2.jpg"
+                        <img class="img-fluid" width="1525" height="620" src="assets/images/global-3.avif"
                             alt="Global Reach">
                     </div>
                 </div>
@@ -269,7 +260,7 @@
                             <span>01</span>
                             <div class="solutions-info-list__details">
                                 <p>Expanded Market Reach</p>
-                                <span>Access top-tier retail channels across North America, Europe, the Middle East, Africa & Europe</span>
+                                <span>Access top-tier retail channels across North America, Europe, the Middle East, & Africa</span>
                             </div>
                         </div>
                         <div class="solutions-info__list">
@@ -337,13 +328,13 @@
                         <div class="faq-answer">
                             <p>Rehoboth Allied Ventures is a global marketing, sales, and distribution company that
                                 helps brands expand into major retail channels as well as regional stores across North
-                                America, Europe, the Middle East, Africa & Europe. We focus on driving consistent, profitable
+                                America, Europe, the Middle East, & Africa. We focus on driving consistent, profitable
                                 sell-through, not just getting products listed.</p>
                         </div>
                     </div>
 
                     <div class="faq-item">
-                        <button class="faq-question">What types of companies or products do you partner with?</button>
+                        <button class="faq-question">What types of companies or products do we partner with?</button>
                         <div class="faq-answer">
                             <p>We work with manufacturers, brand owners, and distributors that offer high-quality
                                 consumer products including home goods, health and beauty, baby products, lifestyle,
@@ -374,10 +365,10 @@
                     </div>
 
                     <div class="faq-item">
-                        <button class="faq-question">In which regions or markets can you help sell our
+                        <button class="faq-question">In which regions or markets can we help sell your
                             products?</button>
                         <div class="faq-answer">
-                            <p>We actively operate in North America, Europe, the Middle East, Africa & Europe, offering
+                            <p>We actively operate in North America, Europe, the Middle East, & Africa, offering
                                 regional market intelligence and logistics support for brands seeking both online and
                                 brick-and-mortar retail expansion in these territories.</p>
                         </div>
@@ -385,7 +376,7 @@
 
                     <div class="faq-item">
                         <button class="faq-question">What are the main benefits for manufacturers partnering with
-                            you?</button>
+                            us?</button>
                         <div class="faq-answer">
                             <p>1. Access to top global retailers and online marketplaces</p>
                             <p>2. End-to-end distribution and logistics management</p>
