--- a/contact.html
+++ b/contact.html
@@ -64,17 +64,8 @@
                     <li><a href="index.html" class="btn" aria-label="Home">Home</a></li>
                     <li><a href="index.html#services" class="btn" aria-label="Services">Services</a></li>
                     <li><a href="index.html#faq" class="btn" aria-label="FAQ">FAQ</a></li>
-                    <li><a href="contact.html" class="btn active" aria-label="Cantact">Cantact</a></li>
+                    <li><a href="contact.html" class="btn active" aria-label="Cantact">Contact</a></li>
                 </ul>
-
-                <a href="#" class="phone desktop-phone" aria-label="phone">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path
-                            d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72 12.84 12.84 0 00.7 2.81 2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45 12.84 12.84 0 002.81.7A2 2 0 0122 16.92z" />
-                    </svg>
-                    <span>(123) 456 789</span>
-                </a>
-
                 <button class="mobile-menu-btn" id="mobileMenuBtn">
                     <svg id="menuIcon" viewBox="0 0 24 24" fill="#fff" stroke="#fff" stroke-width="2">
                         <line x1="3" y1="12" x2="21" y2="12"></line>
