--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
                     <ul>
                         <li><a href="index.html#services" aria-label="Services">Services</a></li>
                         <li><a href="index.html#faq" aria-label="FAQ">FAQ</a></li>
-                        <li><a href="contact.html" aria-label="Cantact">Cantact</a></li>
+                        <li><a href="contact.html" aria-label="Cantact">Contact</a></li>
                     </ul>
                 </div>
 
