--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                     <ul>
                         <li><a href="#services" aria-label="Services">Services</a></li>
                         <li><a href="#faq" aria-label="FAQ">FAQ</a></li>
-                        <li><a href="contact.html" aria-label="Cantact">Cantact</a></li>
+                        <li><a href="contact.html" aria-label="Cantact">Contact</a></li>
                     </ul>
                 </div>
 
