--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <p>Monitor your shipments at every stage with our advanced tracking system</p>
                     </div>
                     <div class="global-reach__map">
-                        <img class="img-fluid" width="1525" height="620" src="assets/images/global-3.avif"
+                        <img class="img-fluid" width="1525" height="620" src="assets/images/global-3.png"
                             alt="Global Reach">
                     </div>
                 </div>
