--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <!-- services end -->
 
         <!-- global reach start -->
-        <section class="section pt-0">
+        <section class="section pt-0 pb-0">
             <div class="container-fluid">
                 <div class="global-reach">
                     <div class="global-reach__head">
