--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <div class="global-reach">
                     <div class="global-reach__head">
                         <h3>Global Reach</h3>
-                        <p>Monitor your shipments at every stage with our advanced tracking system</p>
+                        <p>Scaling brands beyond borders, Access new markets. Unlock global growth</p>
                     </div>
                     <div class="global-reach__map">
                         <img class="img-fluid" width="1525" height="620" src="assets/images/global-3.png"
@@ -432,17 +432,6 @@
                         <li><a href="#faq" aria-label="FAQ">FAQ</a></li>
                         <li><a href="contact.html" aria-label="Cantact">Contact</a></li>
                     </ul>
-                </div>
-
-                <!-- Right -->
-                <div class="footer-column">
-                    <h3>Contact</h3>
-                    <div class="contact-info">
-                        <div><i class="fa-regular fa-envelope"></i> <a href="mailto:info@gmail.com"
-                                aria-label="gmail">info@gmail.com</a></div>
-                        <div><i class="fa-solid fa-location-dot"></i> <a href="#" aria-label="location">Location</a>
-                        </div>
-                    </div>
                 </div>
             </div>
 
